checked for content spacing issues on log in started nav bar

--- a/public/assets/css/login-styles/login.css
+++ b/public/assets/css/login-styles/login.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     border-radius: .5em;
     color: white;
+    padding: 1.5em;
 }
 .message-div{
     color: var(--off-white);
