--- a/public/assets/css/login-styles/user.css
+++ b/public/assets/css/login-styles/user.css
@@ -7,7 +7,7 @@
     justify-content: space-around;
     width: 100%;
     height: 100%;
-    max-width: 75%;
+  
     max-height: 75%;
     border-radius: 5px;
 }
