--- a/public/assets/css/site-styles/btn.css
+++ b/public/assets/css/site-styles/btn.css
@@ -1,6 +1,6 @@
 .btn {
     font-size: 1.5em;
-    margin-left: 30px;
+    margin: 0px .5em;
     padding: .75em 1em;
     border: none;
     outline:none;
